assets/styles/_blocks.scss
//-----
// ICON
//-----
.icon {
  height: 1em;
  line-height: 0;
  width: 1em;
}
//------
// LABEL
//------
.label {
  @include moderato;
  background-color: $color-neutral-lower;
  color: $color-neutral-high;
  display: inline-flex;
  letter-spacing: 1px;
  line-height: 1;
  padding: rem-calc(3) $h-unit / 2;
  text-transform: uppercase;

  &__icon {
    margin-right: $h-unit / 2;
  }
}
//-----
// ICON
//-----
.button {
  @include adagio;
  align-items: center;
  background-color: $color-primary;
  border-radius: 3px;
  box-shadow: 0 0 3px 3px transparent;
  color: $color-neutral-lowest;
  display: inline-flex;
  font-weight: 700;
  height: rem-calc(44);
  justify-content: center;
  line-height: 0;
  padding: 0 $h-unit * 2;
  text-decoration: none;

  &:hover {
    box-shadow: 0 0 5px 5px $color-neutral-low;
  }

  &__icon {
    font-size: 86%;
    margin-right: $h-unit / 2;
  }
}
//------
// INTRO
//------
.intro {

  // &__title {}

  &__description {
    color: $color-neutral-medium-high;
  }

  &__start-button {
    margin-top: $v-unit * 2;
  }
}
//-----
// HERO
//-----
.hero {
  $cover-base-color: $color-neutral-highest;
  $cover-overlay-color: transparent;
  background-color: $cover-base-color;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  color: $color-neutral-lowest;
  position: relative;

  &__info-wrapper::after,
  &__cover {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 0;

    @include media-query(medium) {
      left: auto;
      right: 0;
      width: rem-calc(800);
    }
  }

  &__cover {
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;

    @include media-query(medium) {

      &::before,
      &::after {
        content: '';
        display: block;
        height: 100%;
        position: absolute;
        top: 0;
      }

      &::before {
        background-image: linear-gradient(to right, $cover-base-color 50%, transparent);
        left: 0;
        transform: translateX(-50%);
        width: rem-calc(360);
      }

      &::after {
        background-image: linear-gradient(to right, transparent, $cover-base-color);
        right: 0;
        width: 30%;
      }
    }
  }

  &__info-wrapper {
    margin: 0 auto;
    max-width: $layout-wrapper;
    padding: $v-unit * 3 $h-unit;
    position: relative;

    &::after {
      background-image: linear-gradient(to top, rgba($cover-base-color, .6), rgba($cover-base-color, .8));
      content: '';

      @include media-query(large) {
        background-color: rgba($cover-base-color, .1);
        background-image: none;
      }
    }
  }

  &__info {
    max-width: rem-calc(640);
    position: relative;
    text-shadow: 1px 1px rgba($cover-base-color, .3);
    z-index: 1;

    @include media-query(medium) {
      min-height: rem-calc(320);
    }
  }

  &__author-name {
    @include largo;
    color: $color-neutral-medium;
    font-weight: 400;
    line-height: 1;
  }

  &__author-picture {
    display: none;
    margin-bottom: $v-unit;
    width: rem-calc(100);

    @include media-query(medium) {
      display: block;
    }
  }

  &__author-picture-image {
    border-radius: 3px;
    display: block;
    width: 100%;
  }

  &__title {
    font-weight: 700;
    margin: $v-unit * 2 0 $v-unit;
  }

  &__subtitle {
    color: $color-neutral-medium;
    margin: $v-unit 0;
  }

  &__detail {
    @include andante;
    align-items: center;
    color: $color-neutral-medium;
    display: flex;
    margin-top: $v-unit * 2;
  }

  &__slides {
    align-items: center;
    color: currentColor;
    display: flex;
    line-height: 1;
    text-decoration: none;
    text-transform: uppercase;
  }

  &__slides-icon {
    margin-right: $h-unit / 2;
  }

  &__slides-count {
    font-weight: 700;
    margin-right: $h-unit / 4;
  }

  &__date {
    margin-left: $h-unit / 2;

    &::before {
      content: '\00b7';
      margin-right: $h-unit / 2;
    }
  }

  &__categories {
    margin-top: $v-unit * 2;
  }

  &__category {
    background-color: $color-primary;
    color: $color-neutral-lowest;
    display: inline-block;
    font-size: em-calc(12);
    font-weight: bold;
    letter-spacing: 1px;
    line-height: 1;
    margin-right: $h-unit / 2;
    padding: rem-calc(2) $h-unit / 2;
    text-shadow: none;
    text-transform: uppercase;
  }

  &__categories + &__title {
    margin-top: $v-unit / 2;
  }

  &__links {
    display: none;
    position: absolute;
    right: $h-unit;
    top: $v-unit * 3;
    z-index: 2;

    @include media-query(medium) {
      display: block;
    }
  }
}
//--------
// ACTIONS
//--------
.actions {

  &__link {
    align-items: center;
    background-color: rgba($color-neutral-high, .4);
    border-radius: 3px;
    color: $color-neutral-lowest;
    display: flex;
    flex-direction: column;
    margin-bottom: $v-unit;
    padding: rem-calc(8);
    text-decoration: none;

    &:hover {
      background-color: $color-primary;
    }
  }

  &__icon {
    font-size: em-calc(30);
  }

  &__text {
    font-size: em-calc(12);
    margin-top: $v-unit / 2;
    text-transform: uppercase;
  }
}
//------------------
// TABLE OF CONTENTS
//------------------
.table-contents {
  padding-bottom: $v-unit;

  &__title {
    align-items: baseline;
    display: flex;
    line-height: 1;
    margin: 0;
    padding-top: $v-unit;
    position: relative;
  }

  &__detail {
    @include andante;
    align-items: center;
    color: $color-neutral-medium-high;
    display: flex;
    line-height: 1;
    margin-top: $v-unit;
  }

  &__detail-text,
  &__detail-icon {
    margin-right: $h-unit / 2;
  }

  &__detail-evidence {
    margin-right: $h-unit / 4;
  }

  &__list {
    @include grid-row(false);
    list-style: none;
    margin: $v-unit (-$h-unit / 2) 0;
    padding: 0;
    width: auto;
  }

  &__item {
    @include grid-column((xxsmall: 6, small: 4, medium: 3, xlarge: 2), true);
    padding: 0 $h-unit / 2;
  }
}
//--------------
// SLIDE PREVIEW
//--------------
.slide-preview {
  margin-top: $v-unit / 2;

  &__link {
    border-top: 1px solid $color-neutral-low;
    color: $color-neutral-highest;
    display: block;
    text-decoration: none;

    &:hover {
      color: $color-primary;
    }
  }

  &__cover {
    position: relative;
  }

  &__cover-overlay {
    bottom: 0;
    box-shadow: inset 0 0 3px 3px rgba($color-neutral-medium-high, .2);
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
  }

  &__link:hover &__cover-overlay {
    box-shadow: inset 0 0 5px 5px rgba($color-neutral-medium-high, .4);
  }

  &__index {
    background-color: rgba($color-neutral-highest, .6);
    border-radius: 3px;
    bottom: rem-calc(4);
    color: $color-neutral-lowest;
    font-size: em-calc(12);
    font-weight: 700;
    line-height: 1;
    padding: rem-calc(3) $h-unit / 2;
    position: absolute;
    right: rem-calc(4);
    text-align: center;
    text-transform: uppercase;
    z-index: 1;
  }

  &__cover-image {
    display: block;
    width: 100%;
  }

  &__text {
    padding: ($v-unit * .75) rem-calc(2);
  }

  &__title {
    @include andante;
    color: $color-neutral-high;
    font-weight: 700;
    line-height: 1.2;
    margin: 0;
  }
}

//-------------------
// SLIDE MENU PREVIEW
//-------------------
.slide-menu-preview {

  &__link {
    @include grid-row(false);
    align-items: center;
    color: $color-neutral-highest;
    text-decoration: none;
  }

  &__cover {
    @include grid-column(5, true);
    max-width: rem-calc(100);
    position: relative;
  }

  &__index {
    @include moderato;
    color: $color-neutral-medium;
    line-height: 1;
  }

  &__cover-image {
    display: block;
    width: 100%;
  }

  &__text {
    @include grid-column(7, false);
    margin-left: $h-unit / 2;
    padding: ($v-unit / 4) 0;
  }

  &__title {
    @include moderato;
    color: $color-neutral-lowest;
    font-weight: 700;
    line-height: 1.2;
    margin: $v-unit / 4 0 0;
  }
}
//---------------
// AUTHOR PREVIEW
//---------------
.author {
  &__title {
    @include andante;
    color: $color-neutral-high;
    font-style: italic;
    line-height: 1;
  }

  &__content {
    @include grid-row(false);
    margin-top: $v-unit;
  }

  &__picture {
    @include grid-column(0, true);
    margin-right: $h-unit / 2;
    max-width: rem-calc(80);
  }

  &__picture-image {
    border-radius: 3px;
    display: block;
    width: 100%;
  }

  &__info {
    @include grid-column(auto, true);
    justify-content: center;
  }

  &__name {
    @include lento;
    margin: 0;
  }

  &__role {
    @include larghetto;
    color: $color-neutral-medium-high;
    line-height: 1;
    margin-top: $v-unit / 4;
  }

  &__description {
    color: $color-neutral-medium-high;
    margin-top: $v-unit * 1.5;

    &,
    p {
      @include andante;
    }
  }
}
//-------------
// DECK PREVIEW
//-------------
.deck-preview {

  &__content {
    @include grid-row(false);
    align-items: center;
  }

  &__cover {
    @include grid-column(0, true);
    display: none;
    margin-left: (-$column-gutter / 2);
    padding-right: $h-unit;

    @include media-query(medium) {
      display: flex;
    }
  }

  &__cover-image {
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    display: block;
    height: rem-calc(70);
    width: rem-calc(70);
  }

  &__info {
    @include grid-column(auto, true);
    justify-content: center;
    padding: ($v-unit * .75) ($h-unit * .75) ($v-unit * .75) 0;
  }

  &__author {
    @include andante;
    color: $color-neutral-medium;
    display: none;
    line-height: 1;

    @include media-query(medium) {
      display: block;
    }
  }

  &__title {
    @include lento;
    color: $color-neutral-medium;
    display: block;
    text-decoration: none;

    @include media-query(medium) {
      color: $color-neutral-lower;
    }
  }

  &__slides {
    @include grid-column(0, true);
    border-left: 1px solid rgba($color-neutral-lowest, .2);
  }

  &__counter {
    padding: ($v-unit * .75) 0 ($v-unit * .75) $h-unit;
  }

  &__counter-value {
    @include largo;
    color: $color-neutral-lowest;
    line-height: 1;
  }
}

